# combining-static-libraries-to-shared

./: .gitignore  README.md
object-libs/src/: CMakeLists.txt
object-libs/src/Main/: CMakeLists.txt  main.cpp
object-libs/src/ObjectLib/: CMakeLists.txt
object-libs/src/ObjectLib/include/: objectLib1.h  objectLib2.h
object-libs/src/SharedLib/include/: sharedLib.h
object-libs/src/StaticLib/: CMakeLists.txt  staticLib1.cpp
object-libs/src/StaticLib/include/: staticLib1.h
src/ObjectLib/: objectLib1.cpp  objectLib2.cpp
src/SharedLib/: CMakeLists.txt  sharedLib.cpp
src/StaticLib/: staticLib2.cpp
src/StaticLib/include/: staticLib2.h
whole-archive/src/: CMakeLists.txt
whole-archive/src/Main/: CMakeLists.txt
whole-archive/src/SharedLib/: CMakeLists.txt  sharedLib.cpp
whole-archive/src/StandaloneStaticLib/: CMakeLists.txt  standaloneStaticLib1.cpp  standaloneStaticLib2.cpp
whole-archive/src/StandaloneStaticLib/include/: standaloneStaticLib1.h  standaloneStaticLib2.h
whole-archive/src/StaticLibChild/: CMakeLists.txt  staticLibChild1.cpp  staticLibChild2.cpp
whole-archive/src/StaticLibChild/include/: staticLibChild1.h  staticLibChild2.h
whole-archive/src/StaticLibWithChild/: CMakeLists.txt  staticLibWithChild1.cpp  staticLibWithChild2.cpp
whole-archive/src/StaticLibWithChild/include/: staticLibWithChild1.h  staticLibWithChild2.h
